<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">AppManager</string>
    <string name="activity_title_detail">Detail of the app</string>
    <string name="activity_title_add_app">Add new app</string>
    <string name="activity_title_edit_app">Edit the app</string>
    <string name="activity_title_help">Help</string>
    <string name="activity_title_settings">Settings</string>
    <string name="activity_title_about">About this app</string>
    <string name="activity_title_license">License</string>
    <string name="action_reload">Reload</string>
    <string name="action_add_app">@string/activity_title_add_app</string>
    <string name="action_help">@string/activity_title_help</string>
    <string name="action_settings">@string/activity_title_settings</string>
    <string name="action_edit">Edit</string>
    <string name="label_name">Name</string>
    <string name="label_url">URL</string>
    <string name="label_basic_auth_user">Basic Auth User (Optional)</string>
    <string name="label_basic_auth_password">Basic Auth Password (Optional)</string>
    <string name="label_add_app_empty">+ Add new app</string>
    <string name="label_install">Install</string>
    <string name="label_save">Save</string>
    <string name="label_show_password">Show password</string>
    <string name="label_delete">Delete</string>
    <string name="label_basic_usage">Basic usage</string>
    <string name="label_for_testers">For testers</string>
    <string name="label_for_developers">For developers</string>
    <string name="label_permission_required">Permission required</string>
    <string name="label_permission_required_description">This operation is restricted by administrator.</string>
    <string name="label_admin_password">Administrator\'s password</string>
    <string name="label_current_password">Current password</string>
    <string name="label_new_password">New password</string>
    <string name="label_retype_password">Retype password</string>
    <string name="label_version">Version</string>
    <string name="label_copyright" translatable="false">&amp;copy; 2014 Soichiro Kashima All rights reserved.</string>
    <string name="msg_start"><![CDATA[AppManager can install app from servers that requires authentications. If you receive an email that includes URL for this app, open this app from the link. Otherwise, tap \"Add new app\" to start.]]></string>
    <string name="msg_confirm_file_entry_delete">Are you sure to delete this entry? This cannot be undone.</string>
    <string name="msg_confirm_file_entry_finish">Are you sure to discard changes?</string>
    <string name="msg_info_update">Update %1$s is available</string>
    <string name="msg_installing">Installing&#8230;</string>
    <string name="msg_password_not_matched">Current password is wrong</string>
    <string name="msg_retyped_password_not_matched">Retyped password not matched</string>
    <string name="msg_incorrect_password">Incorrect password</string>
    <string name="msg_about_fork_me_on_github" translatable="false">Fork me on GitHub!</string>
    <string name="msg_about_github_url" translatable="false">https://github.com/app-manager/AppManager-for-Android</string>
    <string name="msg_about_am_description">Beta app installer with authentication</string>
    <string name="msg_develop_as_open_source">AppManager is developed as an OSS project</string>
    <string name="msg_help_testers"><![CDATA[Thank you for using AppManager! AppManager is a alpha/beta version app\'s downloader/installer.

\n\nIf you have received emails with URL and have been told to use this app, tap the link and open with this app. If you don\'t have received any emails, tap \"Add new app\" button and fill in the forms.

\n\nThen, tap \"Install\" button to download and install the app. If the app properly downloaded, a dialog will open that ask you to install the app.

\n\nIf you don\'t allow installing app outside the Google Play, you cannot install apps. If you fail to install apps, open the device\'s settings screen, check \"Unknown sources\" to allow installing apps other than Google Play. \"Unknown sources\" setting is included \"Security\" category or something like that. It might be different depending on the OS version or device models.]]></string>
    <string name="msg_help_developers"><![CDATA[Thank you for using AppManager! AppManager is a alpha/beta app downloader and installer.
\nTo distribute apps for testers, at first, locate your APK file to your server.

\n\nAnd the testers must install this app. Note that \"Unknown sources\" must be enabled to install alpha/beta apps using this app.

\n\nThen you tell the testers the information to install the app: URL for the APK file, basic auth user/password if needed.

\n\nThese information can be included in some kind of URL, which launch this apps by Intent.
\nFor example, if you locate the APK file to
\nhttp://example.com/path/to/awsomeapp.apk
\nset basic auth with user name "user" and password "pass", and app name "GreatApp", you can write the URL like this:
\n\nhttp://user:pass@import-to-appmanager/example.com/path/to/awesomeapp.apk#GreatApp
\n\nor you can use the following hostname:
\n\nhttp://user:pass@app-manager.github.io/example.com/path/to/awesomeapp.apk#GreatApp]]></string>
    <string name="msg_license">This application is constructed using following software.</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_general_title_admin_password">Administrator\'s Password</string>
    <string name="pref_category_version">App information</string>
    <string name="pref_category_version_title_help">@string/activity_title_help</string>
    <string name="pref_category_version_title_about">@string/activity_title_about</string>
    <string name="pref_category_version_title_license">@string/activity_title_license</string>

    <!-- Error messages -->
    <string name="error_file_entry_empty">Invalid file entry.</string>
    <string name="error_file_entry_url_required">URL is required.</string>
    <string name="error_no_connected_network">Not connected to network.</string>
    <string name="error_download">Download failed!</string>
    <string name="error_not_found">File not found</string>
    <string name="error_unauthorized">Unauthorized</string>
    <string name="error_unknown_host">Unknown host</string>
</resources>