<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    tools:context=".app.HelpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/AppTextViewStyle.ListHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_category_general" />

        <Button
            android:id="@+id/set_admin_password"
            style="@style/AppButtonStyle.List"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_category_general_title_admin_password" />

        <TextView
            style="@style/AppTextViewStyle.ListHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_category_version" />

        <Button
            android:id="@+id/help"
            style="@style/AppButtonStyle.List"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_category_version_title_help" />

        <include layout="@layout/divider" />

        <Button
            android:id="@+id/show_version"
            style="@style/AppButtonStyle.List"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_category_version_title_about" />
    </LinearLayout>

</ScrollView>
