<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    tools:context=".app.HelpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/AppTextViewStyle.ListHeader"
            android:text="@string/label_basic_usage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/tester"
            style="@style/AppButtonStyle.List"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_for_testers" />

        <include layout="@layout/divider" />

        <Button
            android:id="@+id/developer"
            style="@style/AppButtonStyle.List"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_for_developers" />
    </LinearLayout>

</ScrollView>
