<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".app.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/AppTextViewStyle.DetailHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_name" />

        <TextView
            android:id="@+id/name"
            style="@style/AppTextViewStyle.DetailBody"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_short" />

        <TextView
            style="@style/AppTextViewStyle.DetailHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_short"
            android:text="@string/label_url" />

        <TextView
            android:id="@+id/url"
            style="@style/AppTextViewStyle.DetailBody"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_short" />

        <Button
            android:id="@+id/install"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_short"
            android:text="@string/label_install" />
    </LinearLayout>
</ScrollView>
