<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_standard">

        <TextView
            style="@style/AppTextViewStyle.DetailHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_current_password" />

        <EditText
            android:id="@+id/current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_short"
            android:inputType="text|textPassword" />


        <TextView
            style="@style/AppTextViewStyle.DetailHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_short"
            android:text="@string/label_new_password" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_short"
            android:inputType="text|textPassword" />


        <TextView
            style="@style/AppTextViewStyle.DetailHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_short"
            android:text="@string/label_retype_password" />

        <EditText
            android:id="@+id/retype_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_short"
            android:inputType="text|textPassword" />

    </LinearLayout>
</ScrollView>
